Use smaller headings for nested subrecord form sections

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -62,8 +62,16 @@
   padding-left: 10px;
 }
 
-.record-pane section h3 .btn.pull-right {
+.record-pane section h3 .btn.pull-right,
+.record-pane section section h4 .btn.pull-right {
   margin: 6px 6px 0 0;
+}
+
+.record-pane section section h4 {
+  background-color: #F6F6F6;
+  border-bottom: 1px solid #DDD;
+  padding-left: 10px;
+  line-height: 36px;
 }
 
 .linker-list {
@@ -215,20 +223,19 @@
 
 /* AGENT NAME Form styles */
 .subrecord-form {
+  margin: 20px 0;
   background-color: #FAFAFA;
   .box-shadow(~"1px 1px 3px rgba(0, 0, 0, 0.25)");
 
   .subrecord-form-container {
-    margin: 0 10px 20px;
+    margin: 0 10px;
     padding: 0 0 10px;
 
     .alert {
       margin: 10px 0 0;
     }
 
-    h3 {
-      background-color: #F6F6F6;
-      line-height: 1.4em;
+    .subrecord-form-heading {
       min-height: 1.4em;
       margin: 0;
       border-bottom: 1px solid #DDD;
