--- a/frontend/app/views/rights_statements/_show.html.erb
+++ b/frontend/app/views/rights_statements/_show.html.erb
@@ -33,8 +33,8 @@
               <% end %>
             </div>
           <% end %>
-          <% if rights_statement.external_documents.length > 0 %>
-            <%= render :partial => "external_documents/show", :locals => { :external_documents => rights_statement.external_documents } %>
+          <% if rights_statement["external_documents"].length > 0 %>
+            <%= render :partial => "external_documents/show", :locals => { :external_documents => rights_statement["external_documents"] } %>
           <% end %>
         </div>
       </div>
