--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -42,6 +42,12 @@
                   </li>
                 </ul>
               </li>
+							<li class="dropdown import-container">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Import / Export <b class="caret"></b></a>
+	             	<ul class="dropdown-menu">
+                  <li><%= link_to "Import", :controller => :import, :action => :index %></li>
+								</ul>
+							</li>
             <% end %>
             <% if user_can?('manage_repository') %>
               <li class="dropdown admin-container">
