Add handling for JSONModel property type boolean in the form helper -- add field for rights #active

--- a/frontend/app/views/rights_statements/_form.html.erb
+++ b/frontend/app/views/rights_statements/_form.html.erb
@@ -1,6 +1,7 @@
 <div class="subrecord-form-fields" data-allow-removal="true">
   <%= f.label_and_field :identifier %>
   <%= f.label_and_field :rights_type %>
+  <%= f.label_and_field :active %>
   <%= f.label_and_field :materials %>
   <%= f.label_and_field :ip_status %>
   <%= f.label_and_field :ip_expiration_date %>
