Fix up the subrecord refactoring until the selenium tests work

--- a/frontend/app/views/agents/_contact_details.html.erb
+++ b/frontend/app/views/agents/_contact_details.html.erb
@@ -1,18 +1,17 @@
-<div class="subform agent-contact-fields">
+<div class="subrecord-form-fields" data-allow-removal="true">
   <a href="javascript:void(0)" class="btn btn-mini pull-right subrecord-form-remove"><span class='icon-remove'></span></a>
-  <div class="subform-container">
-    <%= f.label_and_field :name %>
-    <%= f.label_and_field :salutation %>
-    <%= f.label_and_field :address_1 %>
-    <%= f.label_and_field :address_2 %>
-    <%= f.label_and_field :address_3 %>
-    <%= f.label_and_field :city %>
-    <%= f.label_and_field :region %>
-    <%= f.label_and_field :country %>
-    <%= f.label_and_field :post_code %>
-    <%= f.label_and_field :telephone %>
-    <%= f.label_and_field :telephone_ext %>
-    <%= f.label_and_field :fax %>
-    <%= f.label_and_field :email %>
-  </div>
+
+  <%= f.label_and_field :name %>
+  <%= f.label_and_field :salutation %>
+  <%= f.label_and_field :address_1 %>
+  <%= f.label_and_field :address_2 %>
+  <%= f.label_and_field :address_3 %>
+  <%= f.label_and_field :city %>
+  <%= f.label_and_field :region %>
+  <%= f.label_and_field :country %>
+  <%= f.label_and_field :post_code %>
+  <%= f.label_and_field :telephone %>
+  <%= f.label_and_field :telephone_ext %>
+  <%= f.label_and_field :fax %>
+  <%= f.label_and_field :email %>
 </div>
