Clean up show template for rights and sub external records; add selenium test to add a rights statement with an external document;

--- a/frontend/app/views/external_documents/_show.html.erb
+++ b/frontend/app/views/external_documents/_show.html.erb
@@ -1,4 +1,7 @@
-<section id="external_documents">
+<%
+  id = "external_documents" if id.blank?
+%>
+<section id="<%= id %>">
   <h3>External Documents</h3>
 
   <% external_documents.each_with_index do | document, index | %>
