Attempt to merge Notes with Container/Instance branch

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -4,6 +4,7 @@
 //= require subjects.crud
 //= require dates.crud
 //= require notes.crud
+//= require instances.crud
 //= require subrecord.crud
 
 $(function() {
