--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -281,8 +281,20 @@ section h3 {
 
     }
   }
+
   .subrecord-form {
     margin: 10px 0;
+  }
+
+  .instance-container-or-digital-object {
+    margin: 0 10px;
+
+    .instance-type-nil,
+    .instance-type-digital-object,
+    .instance-type-digital-object-link,
+    .instance-type-with-container {
+      display: none;
+    }
   }
 }
 
