--- a/frontend/app/views/resources/_form_container.html.erb
+++ b/frontend/app/views/resources/_form_container.html.erb
@@ -18,6 +18,7 @@
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "rights_statements"} %>
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "instances"} %>
 
 
 </fieldset>
