--- a/frontend/app/views/resources/_form_container.html.erb
+++ b/frontend/app/views/resources/_form_container.html.erb
@@ -10,6 +10,11 @@
     <%= render :partial => "resources/forms/basic_information", :locals => {:f => f} %>
   </section>
 
+  <section id="notes">
+    <h3>Notes</h3>
+    <%= render :partial => "resources/forms/notes", :locals => {:f => f} %>
+  </section>
+
 
   <%= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @resource, :method => :extents} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @resource, :method => :dates} %>
