WIP add some base templates and js for notes forms

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -3,6 +3,7 @@
 //= require jstree
 //= require subjects.crud
 //= require dates.crud
+//= require notes.crud
 //= require subrecord.crud
 
 $(function() {
