--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -67,6 +67,12 @@
   margin: 6px 6px 0 0;
 }
 
+section h3 {
+  .dropdown-menu {
+
+  }
+}
+
 .record-pane section section h4 {
   background-color: #F6F6F6;
   border-bottom: 1px solid #DDD;
