Clean up some of notes templates and styles

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -67,6 +67,10 @@
   margin: 6px 6px 0 0;
 }
 
+.record-pane section h3 .btn-group.pull-right {
+  margin: 2px 6px 0 0;
+}
+
 section h3 {
   .dropdown-menu {
 
@@ -268,7 +272,19 @@ section h3 {
   }
 }
 
+
 .alert pre {
   background-color: transparent;
   border: none;
 }
+
+
+.dropdown-menu.subrecord-selector {
+  li {
+    padding: 10px;
+  }
+  .form-actions {
+    margin: 0;
+  }
+}
+
