--- a/frontend/app/views/resources/forms/_notes.html.erb
+++ b/frontend/app/views/resources/forms/_notes.html.erb
@@ -12,7 +12,7 @@
 %>
 
 <section id="notes" class="subrecord-form">
-  <h3>Notes
+  <h3 class="subrecord-form-heading">Notes
     <div class="btn-group pull-right">
       <button class="btn btn-small  dropdown-toggle" data-toggle="dropdown">Add Note <span class="caret"></span></button>
       <ul class="dropdown-menu subrecord-selector">
