--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -67,10 +67,6 @@
   margin: 6px 6px 0 0;
 }
 
-.record-pane section h3 .btn-group.pull-right {
-  margin: 2px 6px 0 0;
-}
-
 section h3 {
   .dropdown-menu {
 
@@ -238,19 +234,23 @@ section h3 {
   background-color: #FAFAFA;
   .box-shadow(~"1px 1px 3px rgba(0, 0, 0, 0.25)");
 
+  .subrecord-form-heading {
+    min-height: 1.4em;
+    margin: 0;
+    border-bottom: 1px solid #DDD;
+    .border-radius(4px 4px 0 0);
+
+    .btn-group.pull-right {
+      margin: 3px 6px 0 0;
+    }
+  }
+
   .subrecord-form-container {
     margin: 0 10px;
     padding: 0 0 10px;
 
     .alert {
       margin: 10px 0 0;
-    }
-
-    .subrecord-form-heading {
-      min-height: 1.4em;
-      margin: 0;
-      border-bottom: 1px solid #DDD;
-      .border-radius(4px 4px 0 0);
     }
 
     .subrecord-form-removal-confirmation,
