--- a/frontend/app/views/notes/_bibliography_form.html.erb
+++ b/frontend/app/views/notes/_bibliography_form.html.erb
@@ -2,8 +2,26 @@
   <section class="subrecord-form">
     <h4 class="subrecord-form-heading">
       Bibliography
-      <button class="btn btn-small pull-right dropdown-toggle add-bibliography-item-btn" data-toggle="dropdown">Add Item</button>
     </h4>
-    <div class="subrecord-form-container"></div>
+    <div class="subrecord-form-container">
+      <div class="subrecord-form-fields">
+      <%= f.jsonmodel_hidden_field :jsonmodel_type, "note_bibliography" %>
+      <%= f.jsonmodel_hidden_field :type, "Bibliography" %>
+      <%= f.label_and_field :label %>
+      <%= f.label_and_textarea :content %>
+
+      <section class="subrecord-form">
+        <h4 class="subrecord-form-heading">Items</h4>
+        <div class="subrecord-form-container">
+          <div class="subrecord-form-fields">
+            <textarea id="<%= f.current_name "items" %>[0]" name="<%= f.current_name "items" %>[0]" size="30" type="text"></textarea>
+          </div>
+          <div class="subrecord-form-fields">
+            <textarea id="<%= f.current_name "items" %>[1]" name="<%= f.current_name "items" %>[1]" size="30" type="text"></textarea>
+          </div>
+        </div>
+      </section>
+    </div>
+    </div>
   </section>
 </div>
