--- a/frontend/app/views/notes/_multipart_form.html.erb
+++ b/frontend/app/views/notes/_multipart_form.html.erb
@@ -1,44 +1,28 @@
-<%
-   note_types = []
-
-
-   JSONModel(:note_multipart).schema['properties']['subnotes']['items']['type'].each do |item_def|
-     note_types.push(JSONModel.parse_jsonmodel_ref(item_def['type'])[0].to_s)
-   end
-
-%>
-
 <div class="subrecord-form-fields">
   <h5>MULTI</h5>
-
-  <div class="control-group">
-    <label class="control-label">Type</label>
-    <div class="controls label-only">
-      <%= f.jsonmodel_hidden_field :type, type %>
-      <strong><%= type %></strong>
-    </div>
-  </div>
-
+  <%= f.jsonmodel_hidden_field :jsonmodel_type, "note_multipart" %>
+  <%= f.label_and_field :type %>
   <%= f.label_and_field :label %>
+  <%= f.label_and_textarea :content %>
 
   <section class="subrecord-form">
     <h4 class="subrecord-form-heading">
       Sub Notes
-      <div class="btn-group pull-right">
-        <button class="btn btn-small dropdown-toggle" data-toggle="dropdown">Add Sub Note <span class="caret"></span></button>
-        <ul class="dropdown-menu">
-          <li>
-            <select>
-              <% note_types.sort.each do |type| %>
-                <option value="<% type %>"><%= type %></option>
-              <% end %>
-            </select>
-          </li>
-          <button class="btn btn-small add-sub-note-btn">Add Sub Node For Type</button>
-        </ul>
-      </div>
     </h4>
-    <div class="subrecord-form-container"></div>
+    <div class="subrecord-form-container">
+      <%= f.with_jsonmodel "subnotes[]", {}, :note_bibliography, :index => "0" do %>
+        <% render :partial=>"notes/bibliography_form.html", :locals => {:f => f} %>
+      <% end %>
+      <%= f.with_jsonmodel "subnotes[]", {}, :note_chronology, :index => "1" do %>
+        <% render :partial=>"notes/chronology_form.html", :locals => {:f => f} %>
+      <% end %>
+      <%= f.with_jsonmodel "subnotes[]", {}, :note_orderedlist, :index => "2" do %>
+        <% render :partial=>"notes/orderedlist_form.html", :locals => {:f => f} %>
+      <% end %>
+      <%= f.with_jsonmodel "subnotes[]", {}, :note_definedlist, :index => "3" do %>
+        <% render :partial=>"notes/definedlist_form.html", :locals => {:f => f} %>
+      <% end %>
+    </div>
   </section>
 
 </div>
