Restyle notes forms and add index type note

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -30,7 +30,7 @@
 }
 
 .control-group .controls.label-only {
-  line-height: 30px;
+  line-height: 28px;
 }
 
 /* identifier fields */
@@ -288,3 +288,6 @@ section h3 {
   }
 }
 
+#notes .subrecord-form textarea {
+  width: 94%;
+}
