--- a/frontend/app/views/notes/_index_form.html.erb
+++ b/frontend/app/views/notes/_index_form.html.erb
@@ -16,32 +16,14 @@
   <section class="subrecord-form">
     <h4 class="subrecord-form-heading">Items</h4>
     <div class="subrecord-form-container">
-      <div class="subrecord-form-fields">
-        <div class="control-group ">
-          <label for="<%= f.current_name "items" %>[0][value]" class="control-label">Value</label>
-          <div class="controls">
-            <input id="<%= f.current_name "items" %>[0][value]" name="<%= f.current_name "events" %>[0][value]" size="30" type="text"/>
-          </div>
+      <% f.with_jsonmodel "items[]", {}, f.current.class.schema['properties']['items']['items'], :index => "0" do %>
+        <div class="subrecord-form-fields">
+          <%= f.label_and_field :value %>
+          <%= f.label_and_field :type %>
+          <%= f.label_and_field :reference %>
+          <%= f.label_and_field :reference_text %>
         </div>
-        <div class="control-group ">
-          <label for="<%= f.current_name "items" %>[0][type]" class="control-label">Type</label>
-          <div class="controls">
-            <input id="<%= f.current_name "items" %>[0][type]" name="<%= f.current_name "events" %>[0][type]" size="30" type="text"/>
-          </div>
-        </div>
-        <div class="control-group ">
-          <label for="<%= f.current_name "items" %>[0][reference]" class="control-label">Reference</label>
-          <div class="controls">
-            <input id="<%= f.current_name "items" %>[0][reference]" name="<%= f.current_name "events" %>[0][reference]" size="30" type="text"/>
-          </div>
-        </div>
-        <div class="control-group ">
-          <label for="<%= f.current_name "items" %>[0][reference_text]" class="control-label">Reference Text</label>
-          <div class="controls">
-            <input id="<%= f.current_name "items" %>[0][reference_text]" name="<%= f.current_name "events" %>[0][reference_text]" size="30" type="text"/>
-          </div>
-        </div>
-      </div>
+      <% end %>
     </div>
   </section>
 </div>
