--- a/frontend/app/views/notes/_definedlist_form.html.erb
+++ b/frontend/app/views/notes/_definedlist_form.html.erb
@@ -11,17 +11,15 @@
   <%= f.jsonmodel_hidden_field :type, "Defined List" %>
   <%= f.label_and_field :title %>
 
-  <div class="control-group <%= f.error_classes("items") %>">
-    <label class="control-label">Items</label>
-    <div class="controls">
-      <% f.with_jsonmodel "items[]", "", f.current_model['properties']['items'], :index => "0" do %>
-        <%= f.jsonmodel_text_area "", :value => f.current, :rows => 3 %>
-      <% end %>
-      <div style="padding-top: 10px;"></div>
-      <% f.with_jsonmodel "items[]", "", f.current_model['properties']['items'], :index => "1" do %>
-        <%= f.jsonmodel_text_area "", :value => f.current, :rows => 3 %>
+  <section class="subrecord-form">
+    <h4 class="subrecord-form-heading">Items</h4>
+    <div class="subrecord-form-container">
+      <% f.with_jsonmodel "items[]", {}, f.current.class.schema['properties']['items']['items'], :index => "0" do %>
+        <div class="subrecord-form-fields">
+          <%= f.label_and_field :label %>
+          <%= f.label_and_field :value %>
+        </div>
       <% end %>
     </div>
-  </div>
-
+  </section>
 </div>
