--- a/frontend/app/views/notes/_multipart_form.html.erb
+++ b/frontend/app/views/notes/_multipart_form.html.erb
@@ -1,11 +1,6 @@
 <div class="subrecord-form-fields">
 
-  <div class="control-group ">
-    <label class="control-label">Note Type</label>
-    <div class="controls label-only">
-      <strong>Multipart Note</strong>
-    </div>
-  </div>
+  <h4 class="subrecord-form-heading">Multipart Note</h4>
 
   <%= f.jsonmodel_hidden_field :jsonmodel_type, "note_multipart" %>
   <%= f.label_and_field :type %>
