--- a/frontend/app/views/notes/_orderedlist_form.html.erb
+++ b/frontend/app/views/notes/_orderedlist_form.html.erb
@@ -1,11 +1,6 @@
 <div class="subrecord-form-fields">
 
-  <div class="control-group ">
-    <label class="control-label">Note Type</label>
-    <div class="controls label-only">
-      <strong>Ordered List</strong>
-    </div>
-  </div>
+  <h4 class="subrecord-form-heading">Ordered List</h4>
 
   <%= f.jsonmodel_hidden_field :jsonmodel_type, "note_orderedlist" %>
   <%= f.jsonmodel_hidden_field :type, "Ordered List" %>
