--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -235,6 +235,10 @@ section h3 {
   .box-shadow(~"1px 1px 3px rgba(0, 0, 0, 0.25)");
 
   .subrecord-form-heading {
+    background-color: #F6F6F6;
+    border-bottom: 1px solid #DDD;
+    padding-left: 10px;
+
     min-height: 1.4em;
     margin: 0;
     border-bottom: 1px solid #DDD;
@@ -242,6 +246,12 @@ section h3 {
 
     .btn-group.pull-right {
       margin: 3px 6px 0 0;
+    }
+  }
+
+  .subrecord-form-fields .subrecord-form {
+    .subrecord-form-heading {
+      line-height: 30px;
     }
   }
 
@@ -264,6 +274,11 @@ section h3 {
       .border-radius(4px);
       margin-top: 10px;
       padding-bottom: 10px;
+
+      > .subrecord-form-heading {
+        line-height: 36px;
+      }
+
     }
 
     .subrecord-form {
@@ -288,6 +303,6 @@ section h3 {
   }
 }
 
-#notes .subrecord-form textarea {
+.subrecord-form textarea {
   width: 94%;
 }
