--- a/frontend/app/views/notes/_chronology_form.html.erb
+++ b/frontend/app/views/notes/_chronology_form.html.erb
@@ -1,18 +1,13 @@
 <div class="subrecord-form-fields">
 
-  <div class="control-group ">
-    <label class="control-label">Note Type</label>
-    <div class="controls label-only">
-      <strong>Chronology</strong>
-    </div>
-  </div>
+  <h4 class="subrecord-form-heading">Chronology</h4>
 
   <%= f.jsonmodel_hidden_field :jsonmodel_type, "note_chronology" %>
   <%= f.jsonmodel_hidden_field :type, "Chronology" %>
   <%= f.label_and_field :title %>
 
   <section class="subrecord-form">
-    <h4 class="subrecord-form-heading">Events</h4>
+    <h5 class="subrecord-form-heading">Events</h5>
     <div class="subrecord-form-container">
       <% f.with_jsonmodel "items[]", {}, f.current.class.schema['properties']['items']['items'], :index => "0" do %>
         <div class="subrecord-form-fields">
